updated with better duplicates

--- a/authorlist comparisons/comparisonCSV.ipynb
+++ b/authorlist comparisons/comparisonCSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "f4d72bc6-60c9-4877-b597-0566229d982f",
    "metadata": {},
    "outputs": [
@@ -26,12 +26,13 @@
     "print(config['Authentication'] ['APIKey'])\n",
     "import bct\n",
     "from scholarly import scholarly, ProxyGenerator\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "from collections import defaultdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "9a23163e-670f-4469-9fec-4fdab2d88cac",
    "metadata": {},
    "outputs": [],
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "4d78ec37",
    "metadata": {},
    "outputs": [],
@@ -123,8 +124,21 @@
     "    total_sv_pubs = len(sv_titles)\n",
     "\n",
     "    #duplicates\n",
-    "    sv_duplicates = [k for k,v in Counter(sv_titles).items() if v>1]\n",
-    "    gs_duplicates = [k for k,v in Counter(gs_titles).items() if v>1]\n",
+    "    # sv_duplicates = [k for k,v in Counter(sv_titles).items() if v>1] #only number of duplicated titles\n",
+    "    # gs_duplicates = [k for k,v in Counter(gs_titles).items() if v>1]\n",
+    "\n",
+    "    #counts for multiple duplicates\n",
+    "    sv_duplicates = defaultdict(list)\n",
+    "    for i,item in enumerate(sv_titles):\n",
+    "        sv_duplicates[item].append(i)\n",
+    "    sv_duplicates = {k:v for k,v in sv_duplicates.items() if len(v)>1}\n",
+    "    sv_num_duplicates = sum(np.array([len(v) for k,v in sv_duplicates.items()]))\n",
+    "    \n",
+    "    gs_duplicates = defaultdict(list)\n",
+    "    for i,item in enumerate(gs_titles):\n",
+    "        gs_duplicates[item].append(i)\n",
+    "    gs_duplicates = {k:v for k,v in gs_duplicates.items() if len(v)>1}\n",
+    "    gs_num_duplicates = sum(np.array([len(v) for k,v in gs_duplicates.items()]))\n",
     "\n",
     "    #matching titles\n",
     "    shared_titles = list(set(gs_titles).intersection(sv_titles))\n",
@@ -153,9 +167,9 @@
     "        'gs_name': gs_name, \n",
     "        'gs_id': gs_id,\n",
     "        'gs_count': total_gs_pubs, \n",
-    "        'gs_duplicates_count':gs_duplicates,\n",
+    "        'gs_num_duplicates': gs_num_duplicates,\n",
     "        'sv_count': total_sv_pubs, \n",
-    "        'sv_duplicates_count':sv_duplicates,\n",
+    "        'sv_num_duplicates': sv_num_duplicates,\n",
     "        'gs_only_count':num_gs_only, \n",
     "        'sv_only_count':num_sv_only,\n",
     "        'shared_count':num_matches,\n",
@@ -163,6 +177,8 @@
     "        'sv_coauthors':sv_coauthors,\n",
     "        'gs_betweenness_centrality_normed': \"\",\n",
     "        'sv_betweenness_centrality_normed': \"\",\n",
+    "        '\"sv_duplicates\"':sv_duplicates,\n",
+    "        '\"gs_duplicates\"':gs_duplicates,\n",
     "        # 'gs_only_pubs':gs_only_str,\n",
     "        # 'sv_only_pubs':sv_only_str,\n",
     "        # 'shared_pubs':shared_str,\n",
@@ -172,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 20,
    "id": "7a9b5b68",
    "metadata": {},
    "outputs": [
@@ -180,12 +196,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Annie Vogel-Ciernia has no coauthors\n",
+      "Annie Vogel Ciernia has no coauthors\n",
       "Mark S. Cembrowski has no coauthors\n",
-      "Michael J. Gordon has no coauthors\n",
+      "Michael D. Gordon has no coauthors\n",
       "Manu S. Madhav has no coauthors\n",
-      "Brian D. Fisher has no coauthors\n",
+      "Brian Fisher has no coauthors\n",
       "Emily Lauren Sylwestrak has no coauthors\n",
+      "Anthony Randal McIntosh has no coauthors\n",
       "\n",
       "\n",
       "Michael Gordon has no coauthors\n",
@@ -199,8 +216,8 @@
    "source": [
     "# author_row = 6\n",
     "\n",
-    "sv_df = pd.read_csv(\"scival_outputs/scival_authorlist_publications_official.csv\")\n",
-    "gs_df = pd.read_csv(\"gs_outputs/gs_authorlist_publications.csv\")\n",
+    "sv_df = pd.read_csv(\"scival_outputs/sv_authorlist_publications_updated2.csv\")\n",
+    "gs_df = pd.read_csv(\"gs_outputs/ss_gs_authorlist_updated1.csv\")\n",
     "\n",
     "sv_coauthor_matrix = get_coauthor_matrix(sv_df)\n",
     "gs_coauthor_matrix = get_coauthor_matrix(gs_df)\n",
@@ -220,25 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "4bb0dc4c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(gs_betweenness_normed))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 21,
    "id": "d13c11f1",
    "metadata": {},
    "outputs": [],
@@ -259,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "fb46b752",
    "metadata": {},
    "outputs": [
@@ -267,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "41\n"
+      "46\n"
      ]
     }
    ],
@@ -277,36 +276,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "id": "c098d822",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for d in dict_list:\n",
-    "    gs_num_duplicates = len(d['gs_duplicates_count'])\n",
-    "    d.update((k, gs_num_duplicates) for k, v in d.items() if k == \"gs_duplicates_count\")\n",
-    "    sv_num_duplicates = len(d['sv_duplicates_count'])\n",
-    "    d.update((k, sv_num_duplicates) for k, v in d.items() if k == \"sv_duplicates_count\")"
+    "# for d in dict_list:\n",
+    "#     gs_num_duplicates = len(d['gs_duplicates_count'])\n",
+    "#     sv_num_duplicates = len(d['sv_duplicates_count'])\n",
+    "#     sv_num_duplicates = sum(np.array([len(v) for k,v in sv_D.items()]))\n",
+    "    \n",
+    "#     print(\"total scival duplicates:\",sum(np.array([len(v) for k,v in sv_D.items()])))\n",
+    "#     print()\n",
+    "\n",
+    "#     d.update((k, gs_num_duplicates) for k, v in d.items() if k == \"gs_duplicates_count\")\n",
+    "#     d.update((k, sv_num_duplicates) for k, v in d.items() if k == \"sv_duplicates_count\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 24,
    "id": "0113aaaa-138d-410d-98b6-ae27521eeec9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "with open(\"authors_comparisons_realnumduplicates.csv\", \"w\") as csv_file:\n",
+    "with open(\"authors_comparisons_updated2.csv\", \"w\") as csv_file:\n",
     "    header = [\n",
     "        'sv_name', \n",
     "        'sv_id',\n",
     "        'gs_name', \n",
     "        'gs_id',\n",
     "        'gs_count', \n",
-    "        'gs_duplicates_count',\n",
+    "        'gs_num_duplicates',\n",
     "        'sv_count', \n",
-    "        'sv_duplicates_count',\n",
+    "        'sv_num_duplicates',\n",
     "        'gs_only_count', \n",
     "        'sv_only_count',\n",
     "        'shared_count',\n",
@@ -320,6 +324,8 @@
     "        'sv_degree',\n",
     "        'gs_strength',\n",
     "        'sv_strength',\n",
+    "        '\"sv_duplicates\"',\n",
+    "        '\"gs_duplicates\"',\n",
     "        'gs_only_pubs',\n",
     "        'sv_only_pubs',\n",
     "        'shared_pubs',\n",
