--- a/scival_profile_lookup.ipynb
+++ b/scival_profile_lookup.ipynb
@@ -425,24 +425,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Author(eid='9-s2.0-35465675000', orcid='0000-0002-1784-5662', surname='McIntosh', initials='A.R.', givenname='Anthony Randal', affiliation='Simon Fraser University', documents=297, affiliation_id='60018491', city='Burnaby', country='Canada', areas='NEUR (403); MEDI (122); PSYC (69)'), Author(eid='9-s2.0-57191566535', orcid=None, surname='McIntosh', initials='A.R.', givenname='Andrew Randy', affiliation='National Institute on Aging (NIA)', documents=8, affiliation_id='60017252', city='Bethesda', country='United States', areas='NEUR (15); MEDI (7); HEAL (4)'), Author(eid='9-s2.0-7103288251', orcid=None, surname='McIntosh', initials='R.', givenname='Randy', affiliation='Black Clawson Co', documents=3, affiliation_id='100316940', city='Middletown', country='United States', areas='CENG (3)')]\n"
+      "[Author(eid='9-s2.0-56371437500', orcid='0000-0001-9298-7305', surname='LeDue', initials='J.M.', givenname='Jeffrey M.', affiliation='Djavad Mowafaghian Centre for Brain Health', documents=37, affiliation_id='60083635', city='Vancouver', country='Canada', areas='MEDI (34); NEUR (32); BIOC (16)'), Author(eid='9-s2.0-57495733700', orcid=None, surname='LeDue', initials='J.M.', givenname='Jeffrey M.', affiliation='Université McGill', documents=9, affiliation_id='60002494', city='Montreal', country='Canada', areas='ENGI (10); PHYS (7); CHEM (4)')]\n"
      ]
     }
    ],
    "source": [
-    "lastname = \"mcintosh\" \n",
-    "firstname = \"randy\"\n",
+    "lastname = \"ledue\" \n",
+    "firstname = \"jeffrey m\"\n",
     "query = f\"authlastname({lastname}) and authfirst({firstname})\"\n",
     "s = AuthorSearch(query)\n",
     "authors = s.authors\n",
     "print(authors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "duplicate accounts: \n",
+    "- yutian wang\n",
+    "- jeffrey ledue (58606026100, 56371437500)"
    ]
   }
  ],
