--- a/scival_publications.ipynb
+++ b/scival_publications.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "71be538a-2b12-4e9e-a089-5f119656add7",
    "metadata": {},
    "outputs": [
@@ -43,13 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "id": "e29f00a9-95b1-4543-8306-0135969cd7f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "INPUT_PATH_TO_CSV = \"authorlist comparisons/scival_outputs/scival_ids_authorlist_official.csv\"\n",
-    "OUTPUT_PATH_TO_CSV = \"sv_authorlist_publications_updated1.csv\"\n",
+    "OUTPUT_PATH_TO_CSV = \"sv_authorlist_publications_updated2.csv\"\n",
     "OUTPUT_PATH_TO_CLEANED_CSV = \"scival_authorlist_citations_nodupes.csv\"\n",
     "\n",
     "PUBLICATION_CUTOFF_YEAR = 0 #only publications DURING and AFTER this year will be counted\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "afda8b4d-73d7-4070-a6a6-cb5e3b8960b6",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "id": "ab3b11a9-521d-46c2-9811-d7095154e9b2",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "645c93b4-e6f6-41ae-9721-3578c136aaf2",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "bad0dadc",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "fb82d373-9ea6-4ce4-84c2-8a65a9892260",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "id": "a6de18f2",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "id": "f1cc81ab",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "id": "181db4d4",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'7401632487': 'Timothy H. Murphy', '55491054000': 'Annie Vogel Ciernia', '7006717711': 'Brian A. MacVicar', '24279161600': 'Fidel Vila-Rodriguez', '7005627810': 'Shernaz X. Bamji', '7101895712': 'Lara A. Boyd', '7004159655': 'Paul Pavlidis', '7005375626': 'Martin McKeown', '7004896118': 'A. Jon Stoessl', '6603629883': 'P. A. Cripton', '28167863900': 'Jason S. Snyder', '7006262846': 'Wolfram G. Tetzlaff', '7401658611': 'Anthony G. Phillips', '7005018303': 'Catharine A. Winstanley', '8908521300': 'YuTian Wang', '7003907622': 'Jeremy Keith Seamans', '35408131500': 'Terrance P. Snutch', '16407421900': 'Ian Mackenzie', '7102737545': 'Lynn A. Raymond', '55554765000': 'Kurt Haas', '37036981000': 'Mark S. Cembrowski', '7401756510': 'Fabio Rossi', '55889287500': 'Angela Jane I. Roskams', '7007032941': 'Catharine Rankin', '7402800449': 'Michael D. Gordon', '7103067039': 'Leonid Sigal', '11241026700': 'Z. Jane Wang', '6701751588': 'Peyman Servati', '7004079043': 'Liisa A. M. Galea', '7004549374': 'Sophia Frangou', '36237882900': 'Silke Appel-Cresswell', '55860139200': 'Helge Rhodin', '35146488900': 'Manu S. Madhav', '56363838400': 'Brian Fisher', '7004454250': 'Leigh Anne Swayne', '7408311558': 'Craig E. Brown', '6602928622': 'Adrienne L. Fairhall', '15065850600': 'Eric T. Shea-Brown', '26634611400': 'Emily Lauren Sylwestrak', '9239638800': 'Andy Y. Shih', '7102848867': 'Todd Stephen Woodward', '58606026100': 'Jeffrey M. LeDue', '60010365': 'Ilker Hacihaliloglu', '35465675000': 'Anthony Randal McIntosh', '6602170125': 'Purang Abolmaesumi', '56276238300': 'Vesna Sossi'}\n"
+      "{'7401632487': 'Timothy H. Murphy', '55491054000': 'Annie Vogel Ciernia', '7006717711': 'Brian A. MacVicar', '24279161600': 'Fidel Vila-Rodriguez', '7005627810': 'Shernaz X. Bamji', '7101895712': 'Lara A. Boyd', '7004159655': 'Paul Pavlidis', '7005375626': 'Martin McKeown', '7004896118': 'A. Jon Stoessl', '6603629883': 'P. A. Cripton', '28167863900': 'Jason S. Snyder', '7006262846': 'Wolfram G. Tetzlaff', '7401658611': 'Anthony G. Phillips', '7005018303': 'Catharine A. Winstanley', '8908521300': 'YuTian Wang', '7003907622': 'Jeremy Keith Seamans', '35408131500': 'Terrance P. Snutch', '16407421900': 'Ian Mackenzie', '7102737545': 'Lynn A. Raymond', '55554765000': 'Kurt Haas', '37036981000': 'Mark S. Cembrowski', '7401756510': 'Fabio Rossi', '55889287500': 'Angela Jane I. Roskams', '7007032941': 'Catharine Rankin', '7402800449': 'Michael D. Gordon', '7103067039': 'Leonid Sigal', '11241026700': 'Z. Jane Wang', '6701751588': 'Peyman Servati', '7004079043': 'Liisa A. M. Galea', '7004549374': 'Sophia Frangou', '36237882900': 'Silke Appel-Cresswell', '55860139200': 'Helge Rhodin', '35146488900': 'Manu S. Madhav', '56363838400': 'Brian Fisher', '7004454250': 'Leigh Anne Swayne', '7408311558': 'Craig E. Brown', '6602928622': 'Adrienne L. Fairhall', '15065850600': 'Eric T. Shea-Brown', '26634611400': 'Emily Lauren Sylwestrak', '9239638800': 'Andy Y. Shih', '7102848867': 'Todd Stephen Woodward', '56371437500': 'Jeffrey M. LeDue', '24467768400': 'Ilker Hacihaliloglu', '35465675000': 'Anthony Randal McIntosh', '6602170125': 'Purang Abolmaesumi', '56276238300': 'Vesna Sossi'}\n"
      ]
     }
    ],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "id": "f8135e16-c82d-46f7-a120-e3dfce5de143",
    "metadata": {
     "scrolled": true
@@ -400,6 +400,114 @@
       "looking up Lynn A. Raymond (7102737545)...\n",
       "found 153 publications between 0 and now\n",
       "done\n",
+      "\n",
+      "looking up Kurt Haas (55554765000)...\n",
+      "found 55 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Mark S. Cembrowski (37036981000)...\n",
+      "found 24 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Fabio Rossi (7401756510)...\n",
+      "found 174 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Angela Jane I. Roskams (55889287500)...\n",
+      "found 60 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Catharine Rankin (7007032941)...\n",
+      "found 111 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Michael D. Gordon (7402800449)...\n",
+      "found 29 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Leonid Sigal (7103067039)...\n",
+      "found 128 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Z. Jane Wang (11241026700)...\n",
+      "found 336 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Peyman Servati (6701751588)...\n",
+      "found 137 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Liisa A. M. Galea (7004079043)...\n",
+      "found 210 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Sophia Frangou (7004549374)...\n",
+      "found 313 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Silke Appel-Cresswell (36237882900)...\n",
+      "found 46 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Helge Rhodin (55860139200)...\n",
+      "found 52 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Manu S. Madhav (35146488900)...\n",
+      "found 13 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Brian Fisher (56363838400)...\n",
+      "found 96 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Leigh Anne Swayne (7004454250)...\n",
+      "found 53 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Craig E. Brown (7408311558)...\n",
+      "found 38 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Adrienne L. Fairhall (6602928622)...\n",
+      "found 69 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Eric T. Shea-Brown (15065850600)...\n",
+      "found 82 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Emily Lauren Sylwestrak (26634611400)...\n",
+      "found 10 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Andy Y. Shih (9239638800)...\n",
+      "found 73 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Todd Stephen Woodward (7102848867)...\n",
+      "found 184 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Jeffrey M. LeDue (56371437500)...\n",
+      "found 37 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Ilker Hacihaliloglu (24467768400)...\n",
+      "found 70 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Anthony Randal McIntosh (35465675000)...\n",
+      "found 297 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Purang Abolmaesumi (6602170125)...\n",
+      "found 358 publications between 0 and now\n",
+      "done\n",
+      "\n",
+      "looking up Vesna Sossi (56276238300)...\n",
+      "found 334 publications between 0 and now\n",
+      "done\n",
       "\n"
      ]
     }
@@ -464,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "a80002f7",
    "metadata": {},
    "outputs": [],
