--- a/authorlist comparisons/comparisonCSV.ipynb
+++ b/authorlist comparisons/comparisonCSV.ipynb
@@ -123,15 +123,15 @@
     "    total_gs_pubs = len(gs_titles)\n",
     "    total_sv_pubs = len(sv_titles)\n",
     "\n",
-    "    #duplicates\n",
-    "    # sv_duplicates = [k for k,v in Counter(sv_titles).items() if v>1] #only number of duplicated titles\n",
+    "    #duplicates (only number of duplicated titles)\n",
+    "    # sv_duplicates = [k for k,v in Counter(sv_titles).items() if v>1] \n",
     "    # gs_duplicates = [k for k,v in Counter(gs_titles).items() if v>1]\n",
     "\n",
-    "    #counts for multiple duplicates\n",
+    "    #accounts for multiple duplicates\n",
     "    sv_duplicates = defaultdict(list)\n",
     "    for i,item in enumerate(sv_titles):\n",
     "        sv_duplicates[item].append(i)\n",
-    "    sv_duplicates = {k:v for k,v in sv_duplicates.items() if len(v)>1}\n",
+    "    sv_duplicates = {k:v for k,v in sv_duplicates.items() if len(v)>1} #should be greater or equal to 1?\n",
     "    sv_num_duplicates = sum(np.array([len(v) for k,v in sv_duplicates.items()]))\n",
     "    \n",
     "    gs_duplicates = defaultdict(list)\n",
