--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "0b8f7647-2f14-4e3e-99b0-df093190f2ee",
    "metadata": {
     "vscode": {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "48dd282f-c187-4c92-855d-a42f2c607d86",
    "metadata": {
     "vscode": {
@@ -103,9 +103,14 @@
    "source": [
     "# !!! Modify this to match the name of the CSV file that was created as output form the ScholarScraper notebook\n",
     "\n",
-    "ss_output_file = \"authorlist comparisons/scival_outputs/scival_authorlist_publications.csv\"\n",
-    "title = \"Scival authorlist Coauthored Publications\"\n",
-    "output_pdf_path = \"authorlist_scival.pdf\"\n",
+    "ss_output_file = \"gs_outputs/gs_authorlist_updated1.csv\"\n",
+    "title = \"Google Scholar DBC Coauthored Publications\"\n",
+    "output_pdf_path = \"gs_dbc_updated.pdf\"\n",
+    "\n",
+    "# ss_output_file = \"scival_outputs/sv_authorlist_updated2.csv\"\n",
+    "# title = \"SciVal DBC Coauthored Publications\"\n",
+    "# output_pdf_path = \"sv_dbc_updated.pdf\"\n",
+    "\n",
     "# ss_output_file = \"scival_dmcbh_citations.csv\"\n",
     "# title = \"DMCBH Scival Coauthored Publications\"\n",
     "# output_pdf_path = \"dmcbh_scival.pdf\"\n",
@@ -151,14 +156,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "cbf220ec-01c2-4bac-aeec-64b01ef9ce4a",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in brewer.pal(12, \"Paired\"): could not find function \"brewer.pal\"\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in brewer.pal(12, \"Paired\"): could not find function \"brewer.pal\"\nTraceback:\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! Modify the diagram title\n",
     "\n",
