--- a/authorlist comparisons/svgs_publications_comparison.ipynb
+++ b/authorlist comparisons/svgs_publications_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "1dbb4105-b905-4425-9314-093ead56af07",
    "metadata": {},
    "outputs": [
@@ -27,23 +27,24 @@
     "config['Authentication'] ['APIKey'] = \"127f5bf5de20d338f686704a9a328b86\"\n",
     "print(config['Authentication'] ['APIKey'])\n",
     "from scholarly import scholarly, ProxyGenerator\n",
-    "import re"
+    "import re\n",
+    "from collections import defaultdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "6a21d114",
    "metadata": {},
    "outputs": [],
    "source": [
     "sv_authids = pd.read_csv(\n",
-    "    \"scival_outputs/scival_authorlist_publications_official.csv\"\n",
+    "    \"scival_outputs/sv_authorlist_publications_updated2.csv\"\n",
     "    ).loc[\n",
     "        :,\"Scopus ID\"\n",
     "        ].tolist()\n",
     "gs_authids = pd.read_csv(\n",
-    "    \"gs_outputs/gs_authorlist_publications.csv\"\n",
+    "    \"gs_outputs/gs_authorlist_updated1.csv\"\n",
     "    ).loc[\n",
     "        :,\"Scholar ID\"\n",
     "        ].tolist()"
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "1f6bade5",
    "metadata": {},
    "outputs": [
@@ -59,19 +60,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7401632487, 55491054000, 7006717711, 24279161600, 7005627810, 7101895712, 7004159655, 7005375626, 7004896118, 6603629883, 28167863900, 7006262846, 7401658611, 57207534482, 8908521300, 7102848867, 7003907622, 35408131500, 16407421900, 7102737545, 55554765000, 37036981000, 7401756510, 55889287500, 7007032941, 57210526278, 7103067039, 11241026700, 6701751588, 7004079043, 7004549374, 36237882900, 55860139200, 35146488900, 56363838400, 7004454250, 7408311558, 6602928622, 15065850600, 26634611400, 9239638800]\n",
-      "['qJjM8hkAAAAJ', 'XAGfOIIAAAAJ', 'Sx3420cAAAAJ', 'VynxFpEAAAAJ', 'C832lNEAAAAJ', 'yutn3mwAAAAJ', 'ataejQQAAAAJ', 'cBAT2tQAAAAJ', 'KnhWIqwAAAAJ', 'hm6fJTkAAAAJ', 'B6Fe4-4AAAAJ', 'HgUvr-IAAAAJ', 'cHBZKa4AAAAJ', '62UFkZcAAAAJ', 'oUJOq0EAAAAJ', '72W33RkAAAAJ', 'cDn0toMAAAAJ', 'mTkQFQ8AAAAJ', 'Hx14DYYAAAAJ', 'VyLG_CgAAAAJ', 'zLPRoXUAAAAJ', 'f_ILrbMAAAAJ', 'K1VQtgwAAAAJ', 'nzIRBZ0AAAAJ', 'KM6fM-MAAAAJ', 'WVStjbgAAAAJ', 'P2mG6rcAAAAJ', 'W75uTm8AAAAJ', 'bl8U3JoAAAAJ', 'Q--hI3oAAAAJ', 'iRcTmwkAAAAJ', 'OrRZGCQAAAAJ', '2maWWboAAAAJ', 'OzV0TFoAAAAJ', '1NGZwzoAAAAJ', '6N7x3_wAAAAJ', 'JpTDgvYAAAAJ', 'Qd2_0VkAAAAJ', 'GyvbrjcAAAAJ', 'gKtP4d4AAAAJ', 'NcqRyesAAAAJ']\n"
+      "[7401632487, 55491054000, 7006717711, 24279161600, 7005627810, 7101895712, 7004159655, 7005375626, 7004896118, 6603629883, 28167863900, 7006262846, 7401658611, 7005018303, 8908521300, 7003907622, 35408131500, 16407421900, 7102737545, 55554765000, 37036981000, 7401756510, 55889287500, 7007032941, 7402800449, 7103067039, 11241026700, 6701751588, 7004079043, 7004549374, 36237882900, 55860139200, 35146488900, 56363838400, 7004454250, 7408311558, 6602928622, 15065850600, 26634611400, 9239638800, 7102848867, 56371437500, 24467768400, 35465675000, 6602170125, 56276238300]\n",
+      "46\n",
+      "['qJjM8hkAAAAJ', 'XAGfOIIAAAAJ', 'Sx3420cAAAAJ', 'VynxFpEAAAAJ', 'C832lNEAAAAJ', 'yutn3mwAAAAJ', 'ataejQQAAAAJ', 'cBAT2tQAAAAJ', 'KnhWIqwAAAAJ', 'hm6fJTkAAAAJ', 'B6Fe4-4AAAAJ', 'HgUvr-IAAAAJ', 'cHBZKa4AAAAJ', '62UFkZcAAAAJ', 'oUJOq0EAAAAJ', 'cDn0toMAAAAJ', 'mTkQFQ8AAAAJ', 'Hx14DYYAAAAJ', 'VyLG_CgAAAAJ', 'zLPRoXUAAAAJ', 'f_ILrbMAAAAJ', 'K1VQtgwAAAAJ', 'nzIRBZ0AAAAJ', 'KM6fM-MAAAAJ', 'WVStjbgAAAAJ', 'P2mG6rcAAAAJ', 'W75uTm8AAAAJ', 'bl8U3JoAAAAJ', 'Q--hI3oAAAAJ', 'iRcTmwkAAAAJ', 'OrRZGCQAAAAJ', '2maWWboAAAAJ', 'OzV0TFoAAAAJ', '1NGZwzoAAAAJ', '6N7x3_wAAAAJ', 'JpTDgvYAAAAJ', 'Qd2_0VkAAAAJ', 'GyvbrjcAAAAJ', 'gKtP4d4AAAAJ', 'NcqRyesAAAAJ', '72W33RkAAAAJ', '1ffeRR4AAAAJ', 'dA7G64kAAAAJ', 'Ep3N640AAAAJ', 'gKZS5-IAAAAJ', '5VQTWXgAAAAJ']\n",
+      "46\n"
      ]
     }
    ],
    "source": [
     "print(sv_authids)\n",
-    "print(gs_authids)"
+    "print(len(sv_authids))\n",
+    "print(gs_authids)\n",
+    "print(len(gs_authids))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "7b83c193-1913-4017-933d-50e0fce1b917",
    "metadata": {},
    "outputs": [],
@@ -87,29 +92,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "eccd178a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sv_titles = []\n",
+    "# for pub in pubs:\n",
+    "#     pub_dict = {\n",
+    "#         \"title\":pub.title,\n",
+    "#         \"authors_name\":pub.author_names,\n",
+    "#         \"authors_id\":pub.author_ids,\n",
+    "#         \"citations\":pub.citedby_count,\n",
+    "#     }\n",
+    "#     try:\n",
+    "#         pub_dict[\"pub_type\"] = pub.aggregationType\n",
+    "#     except KeyError:\n",
+    "#         pub_dict[\"pub_type\"] = \"\"\n",
+    "#     sv_titles.append(pub_dict)\n",
+    "\n",
     "sv_titles = []\n",
     "for pub in pubs:\n",
-    "    pub_dict = {\n",
-    "        \"title\":pub.title,\n",
-    "        \"authors_name\":pub.author_names,\n",
-    "        \"authors_id\":pub.author_ids,\n",
-    "        \"citations\":pub.citedby_count,\n",
-    "    }\n",
-    "    try:\n",
-    "        pub_dict[\"pub_type\"] = pub.aggregationType\n",
-    "    except KeyError:\n",
-    "        pub_dict[\"pub_type\"] = \"\"\n",
-    "    sv_titles.append(pub_dict)"
+    "    sv_titles.append(pub.title)\n",
+    "\n",
+    "sv_titles = [\n",
+    "        title.replace(\"<sup>\",\"\").replace(\"</sup>\",\"\").replace(\"<inf>\",\"\").replace(\"</inf>\",\"\") \n",
+    "        for title in sv_titles\n",
+    "    ]\n",
+    "\n",
+    "sv_titles = [\n",
+    "        \" \".join(\n",
+    "            [\n",
+    "                word.strip() \n",
+    "                for word in re.sub(r'[^\\w]', ' ', title.lower()).split(\" \") \n",
+    "                if word != \"\"])\n",
+    "        for title in sv_titles\n",
+    "        ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "94123123",
    "metadata": {},
    "outputs": [
@@ -117,12 +140,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': 'The Flow of Trust: A Visualization Framework to Externalize, Explore, and Explain Trust in ML Applications', 'authors_name': 'van den Elzen, Stef;Andrienko, Gennady;Andrienko, Natalia;Fisher, Brian D.;Martins, Rafael M.;Peltonen, Jaakko;Telea, Alexandru C.;Verleysen, Michel', 'authors_id': '37017508300;6603717488;57194690968;56363838400;7202166110;7101970478;24073902000;7003876274', 'citations': 0, 'pub_type': 'Journal'}\n"
+      "the flow of trust a visualization framework to externalize explore and explain trust in ml applications\n"
      ]
     }
    ],
    "source": [
     "print(sv_titles[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1f54a29d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {})\n"
+     ]
+    }
+   ],
+   "source": [
+    "sv_items = defaultdict(list)\n",
+    "print(sv_items)\n",
+    "for i,item in enumerate(sv_titles):\n",
+    "    sv_items[item].append(i)\n",
+    "sv_duplicates = {k:v for k,v in sv_items.items() if len(v)>1}\n",
+    "sv_num_duplicates = sum(np.array([len(v) for k,v in sv_duplicates.items()]))\n",
+    "sv_unique = {k:v for k,v in sv_items.items() if len(v)==1}\n",
+    "sv_num_unique = sum(np.array([len(v) for k,v in sv_unique.items()]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2409fc74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89\n",
+      "84\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(sv_duplicates))\n",
+    "print(len(sv_unique))"
    ]
   },
   {
