--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fa4520e8",
+   "execution_count": 1,
+   "id": "0b8f7647-2f14-4e3e-99b0-df093190f2ee",
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -65,52 +65,47 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warning message:\n",
-      "\"dependency 'MASS' is not available\"\n",
-      "also installing the dependencies 'processx', 'xfun', 'bslib', 'fontawesome', 'htmltools', 'tinytex', 'lifecycle', 'tidyselect', 'vctrs', 'gtable', 'scales', 'gargle', 'timechange', 'systemfonts', 'vroom', 'callr', 'knitr', 'rmarkdown', 'glue', 'broom', 'conflicted', 'cli', 'dbplyr', 'dplyr', 'dtplyr', 'forcats', 'ggplot2', 'googledrive', 'googlesheets4', 'haven', 'hms', 'jsonlite', 'lubridate', 'magrittr', 'modelr', 'pillar', 'purrr', 'ragg', 'readr', 'readxl', 'reprex', 'rlang', 'rvest', 'stringr', 'tibble', 'tidyr', 'xml2'\n",
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "Loading required package: viridisLite\n",
+      "\n",
+      "Updating HTML index of packages in '.Library'\n",
+      "\n",
+      "Making 'packages.html' ...\n",
+      " done\n",
+      "\n",
+      "========================================\n",
+      "circlize version 0.4.16\n",
+      "CRAN page: https://cran.r-project.org/package=circlize\n",
+      "Github page: https://github.com/jokergoo/circlize\n",
+      "Documentation: https://jokergoo.github.io/circlize_book/book/\n",
+      "\n",
+      "If you use it in published research, please cite:\n",
+      "Gu, Z. circlize implements and enhances circular visualization\n",
+      "  in R. Bioinformatics 2014.\n",
+      "\n",
+      "This message can be suppressed by:\n",
+      "  suppressPackageStartupMessages(library(circlize))\n",
+      "========================================\n",
       "\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "install.packages(\"tidyverse\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "0b8f7647-2f14-4e3e-99b0-df093190f2ee",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in library(tidyverse): there is no package called 'tidyverse'\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in library(tidyverse): there is no package called 'tidyverse'\nTraceback:\n",
-      "1. library(tidyverse)"
      ]
     }
    ],
    "source": [
     "library(tidyverse)\n",
     "library(viridis)\n",
-    "devtools::install_github(\"thomasp85/patchwork\")\n",
-    "devtools::install_github(\"jokergoo/circlize\")\n",
-    "install.packages(\"RColorBrewer\")\n",
+    "# devtools::install_github(\"thomasp85/patchwork\")\n",
+    "# devtools::install_github(\"jokergoo/circlize\")\n",
+    "# install.packages(\"RColorBrewer\")\n",
     "library(patchwork)\n",
     "library(circlize)\n",
     "library(RColorBrewer)"
@@ -126,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "48dd282f-c187-4c92-855d-a42f2c607d86",
    "metadata": {
     "vscode": {
@@ -137,13 +132,13 @@
    "source": [
     "# !!! Modify this to match the name of the CSV file that was created as output form the ScholarScraper notebook\n",
     "\n",
-    "ss_output_file = \"gs_outputs/gs_authorlist_updated1.csv\"\n",
-    "title = \"Google Scholar DBC Coauthored Publications\"\n",
-    "output_pdf_path = \"gs_dbc_updated.pdf\"\n",
+    "# ss_output_file = \"authorlist comparisons/gs_outputs/gs_authorlist_updated1.csv\"\n",
+    "# title = \"Google Scholar DBC Coauthored Publications\"\n",
+    "# output_pdf_path = \"gs_dbc_updated.pdf\"\n",
     "\n",
-    "# ss_output_file = \"scival_outputs/sv_authorlist_updated2.csv\"\n",
-    "# title = \"SciVal DBC Coauthored Publications\"\n",
-    "# output_pdf_path = \"sv_dbc_updated.pdf\"\n",
+    "ss_output_file = \"authorlist comparisons/scival_outputs/sv_authorlist_publications_updated2.csv\"\n",
+    "title = \"SciVal DBC Coauthored Publications\"\n",
+    "output_pdf_path = \"sv_dbc_updated.pdf\"\n",
     "\n",
     "# ss_output_file = \"scival_dmcbh_citations.csv\"\n",
     "# title = \"DMCBH Scival Coauthored Publications\"\n",
@@ -190,23 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "cbf220ec-01c2-4bac-aeec-64b01ef9ce4a",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in brewer.pal(12, \"Paired\"): could not find function \"brewer.pal\"\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in brewer.pal(12, \"Paired\"): could not find function \"brewer.pal\"\nTraceback:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !!! Modify the diagram title\n",
     "\n",
@@ -227,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "4490937c-f743-4584-b016-785bac8c3777",
    "metadata": {
     "vscode": {
@@ -249,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "1db6abb7-5a2e-4ff3-8683-d2a32a80d15b",
    "metadata": {
     "vscode": {
@@ -275,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "9bf222d0-9e43-4a65-b8be-75c472437150",
    "metadata": {
     "vscode": {
@@ -330,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "9f1bc4f3-c252-43b6-baa9-3c1a896266d6",
    "metadata": {
     "vscode": {
@@ -378,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "131f81a0-8fd0-46d9-a856-245d27ae912b",
    "metadata": {
     "vscode": {
