--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -77,11 +77,6 @@
       "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
       "Loading required package: viridisLite\n",
       "\n",
-      "Updating HTML index of packages in '.Library'\n",
-      "\n",
-      "Making 'packages.html' ...\n",
-      " done\n",
-      "\n",
       "========================================\n",
       "circlize version 0.4.16\n",
       "CRAN page: https://cran.r-project.org/package=circlize\n",
@@ -121,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "48dd282f-c187-4c92-855d-a42f2c607d86",
    "metadata": {
     "vscode": {
@@ -132,45 +127,14 @@
    "source": [
     "# !!! Modify this to match the name of the CSV file that was created as output form the ScholarScraper notebook\n",
     "\n",
-    "# ss_output_file = \"authorlist comparisons/gs_outputs/gs_authorlist_updated1.csv\"\n",
+    "# ss_output_file = \"auns/gs_outputs/gs_authorlist_updated1.csv\"\n",
     "# title = \"Google Scholar DBC Coauthored Publications\"\n",
-    "# output_pdf_path = \"gs_dbc_updated.pdf\"\n",
+    "# output_pdf_path = \"gs_DBC_weighted.pdf\"thorlist compariso\n",
     "\n",
     "ss_output_file = \"authorlist comparisons/scival_outputs/sv_authorlist_publications_updated2.csv\"\n",
-    "title = \"SciVal DBC Coauthored Publications\"\n",
-    "output_pdf_path = \"sv_dbc_updated.pdf\"\n",
-    "\n",
-    "# ss_output_file = \"scival_dmcbh_citations.csv\"\n",
-    "# title = \"DMCBH Scival Coauthored Publications\"\n",
-    "# output_pdf_path = \"dmcbh_scival.pdf\"\n",
-    "\n",
-    "# ss_output_file = \"simplified-dmcbh_members_output_data.csv\"\n",
-    "# title = \"DMCBH IRP Collaborations\"\n",
-    "# output_pdf_path = \"dmcbh_members_chord_diagram-unweighted.pdf\"\n",
-    "# output_pdf_path = \"dmcbh_members_chord_diagram-weighted.pdf\"\n",
-    "\n",
-    "# ss_output_file = \"simplified-irp_lmd_members_output_data.csv\"\n",
-    "# title = \"Learning Memory & Dementias IRP Collaborations\"\n",
-    "# output_pdf_path = \"irp_lmd_chord_diagram-unweighted.pdf\"\n",
-    "# output_pdf_path = \"irp_lmd_chord_diagram-weighted.pdf\"\n",
-    "\n",
-    "# ss_output_file = \"simplified-irp_bdnd_members_output_data.csv\"\n",
-    "# title = \"Brain Development\\n& Neurodevelopmental Disorders IRP Collaborations\"\n",
-    "# output_pdf_path = \"irp_bdnd_chord_diagram.pdf\"\n",
-    "\n",
-    "# ss_output_file = \"simplified-irp_mha_members_output_data.csv\"\n",
-    "# title = \"Mental Health & Addictions IRP Collaborations\"\n",
-    "# output_pdf_path = \"irp_mha_chord_diagram-weighted.pdf\"\n",
-    "# output_pdf_path = \"irp_mha_chord_diagram-unweighted.pdf\"\n",
-    "\n",
-    "# ss_output_file = \"simplified-irp_bir_members_output_data.csv\"\n",
-    "# title = \"Brain Injury & Repair IRP Collaborations\"\n",
-    "# output_pdf_path = \"irp_bir_chord_diagram-weighted.pdf\"\n",
-    "# output_pdf_path = \"irp_bir_chord_diagram-unweighted.pdf\"\n",
-    "\n",
-    "# ss_output_file = \"simplified-new-irp_smsmd_members_output_data.csv\"\n",
-    "# title = \"Sensory Motor Systems\\n& Movement Disorders IRP Collaborations\"\n",
-    "# output_pdf_path = \"irp_smsmd_chord_diagram-unweighted.pdf\""
+    "title = \"SciVal DBC Collaborations\"\n",
+    "output_pdf_path = \"sv_DBC_weighted.pdf\"\n",
+    "\n"
    ]
   },
   {
@@ -185,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "cbf220ec-01c2-4bac-aeec-64b01ef9ce4a",
    "metadata": {
     "vscode": {
@@ -213,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "4490937c-f743-4584-b016-785bac8c3777",
    "metadata": {
     "vscode": {
@@ -235,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "1db6abb7-5a2e-4ff3-8683-d2a32a80d15b",
    "metadata": {
     "vscode": {
@@ -261,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "9bf222d0-9e43-4a65-b8be-75c472437150",
    "metadata": {
     "vscode": {
@@ -316,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "9f1bc4f3-c252-43b6-baa9-3c1a896266d6",
    "metadata": {
     "vscode": {
@@ -343,18 +307,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71388505",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "9fdd28b7-72f5-46c3-b728-4ebf4daa2b2c",
    "metadata": {},
@@ -364,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "131f81a0-8fd0-46d9-a856-245d27ae912b",
    "metadata": {
     "vscode": {
@@ -421,20 +373,7 @@
     "#              big.gap = 1\n",
     "# )\n",
     "\n",
-    "# chordDiagram(edge_l,\n",
-    "#              grid.col = color_ind,\n",
-    "#              transparency = 0.25,\n",
-    "#              diffHeight  = -0.04,\n",
-    "#              annotationTrack = \"grid\", \n",
-    "#              annotationTrackHeight = c(0.05, 0.1),\n",
-    "#              link.sort = TRUE, \n",
-    "#              link.largest.ontop = FALSE,\n",
-    "#              self.link = 1, \n",
-    "#              small.gap = 1,\n",
-    "#              big.gap = 1\n",
-    "# )\n",
-    "\n",
-    "chordDiagram(adjacencyData,\n",
+    "chordDiagram(edge_l,\n",
     "             grid.col = color_ind,\n",
     "             transparency = 0.25,\n",
     "             diffHeight  = -0.04,\n",
@@ -446,6 +385,19 @@
     "             small.gap = 1,\n",
     "             big.gap = 1\n",
     ")\n",
+    "\n",
+    "# chordDiagram(adjacencyData,\n",
+    "#              grid.col = color_ind,\n",
+    "#              transparency = 0.25,\n",
+    "#              diffHeight  = -0.04,\n",
+    "#              annotationTrack = \"grid\", \n",
+    "#              annotationTrackHeight = c(0.05, 0.1),\n",
+    "#              link.sort = TRUE, \n",
+    "#              link.largest.ontop = FALSE,\n",
+    "#              self.link = 1, \n",
+    "#              small.gap = 1,\n",
+    "#              big.gap = 1\n",
+    "# )\n",
     "\n",
     "# Add the text and the axis surrounding the diagram.\n",
     "circos.trackPlotRegion(\n",
@@ -499,7 +451,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.3"
+   "version": "4.2.2"
   }
  },
  "nbformat": 4,
